# em2024-macht

./: .env.dist  .gitignore  Cargo.toml  Readme.md
src/: main.rs
src/api/: match_client.rs  mod.rs
src/service/: daily_winner.rs  date_handler.rs  firebase_connector.rs  mod.rs  ranking.rs  score_helper.rs
