[package]
name = "rust-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.22"
serde_derive = "1.0.188"
dotenv = "0.15.0"
futures = "0.3"
reqwest = { version = "0.11.20", features = ["json"] }
tokio = { version = "1.33.0", features = ["full"] }
firestore = "0.37.2"
chrono = "0.4.31"
