[package]
name = "rust-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.22"
serde_derive = "1.0.188"
dotenv = "0.15.0"
futures = "0.3"
reqwest = { version = "0.12.4", features = ["json"] }
tokio = { version = "1.33.0", features = ["full"] }
chrono = "0.4.31"
rusqlite = "0.31.0"
serde_json = "1.0.117"
getopts = "0.2.21"

[dev-dependencies]
mio = "0.8.11"